# AquaponicsLSPUThesis

./: CMakeLists.txt  LICENSE  README.md  sdkconfig  sdkconfig.old
include/: AnalogSensors.h  AquaponicsStructs.h  ConfigurationHelper.h  ConfigurationHelperCxx.h  HiveMQBroker.h  RTC1302.h  ServoMotorC.h  Ultrasonicsensor.h  Wificonnection.h  main_functions.h  model.h
main/: CMakeLists.txt  Kconfig.projbuild  component.mk  main.c
src/: AnalogSensors.c  ConfigurationHelper.cc  HiveMQBroker.c  RTC1302.c  ServoMotorC.c  StandardScaler.cc  Ultrasonicsensor.c  Wificonnection.c  main_functions.cc  model.cc
